--- a/styles/detail.css
+++ b/styles/detail.css
@@ -5,7 +5,8 @@ body .detail-page-container {
   background-image: url("../img/sunday-background.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%; }
+  height: 100%;
+  padding-bottom: 50px; }
   body .detail-page-container .detail-vedio-div {
     padding-top: 150px;
     width: 651px;
@@ -79,17 +80,13 @@ body .detail-page-container {
   body .detail-page-container .detail-notes {
     font-size: 15px; } }
 
-@media (max-width: 768px) {
-  body .search-screen-img {
-    height: 2500px; }
-    body .search-screen-img .book-image {
-      height: 100%; } }
-
 @media (max-width: 684px) {
-  body .detail-page-container .detail-vedio-div .content-detail .download-opt .put-border {
-    width: 100%; }
-    body .detail-page-container .detail-vedio-div .content-detail .download-opt .put-border .down-icon-sec {
-      margin-bottom: 8px; }
+  body .detail-page-container .detail-vedio-div {
+    padding-top: 100px; }
+    body .detail-page-container .detail-vedio-div .content-detail .download-opt .put-border {
+      width: 100%; }
+      body .detail-page-container .detail-vedio-div .content-detail .download-opt .put-border .down-icon-sec {
+        margin-bottom: 8px; }
   body .detail-page-container .detail-notes {
     font-size: 15px; } }
 
@@ -99,12 +96,13 @@ body .detail-page-container {
     body .search-screen-img .book-image {
       height: 100%; }
   body .detail-page-container .detail-vedio-div {
+    padding-top: 80px;
     width: 300px; }
     body .detail-page-container .detail-vedio-div .back-vedio-image img {
       width: 300px; }
     body .detail-page-container .detail-vedio-div .vedio-icon {
       width: 50px;
-      top: 250px;
+      top: 170px;
       left: 130px; }
     body .detail-page-container .detail-vedio-div .content-detail h4 {
       font-size: 25px; }
