--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,7 +20,6 @@ body{
     }
     
     .content{
-        top: 0%;
         width: 100%;
 
         .top-nav {
@@ -37,6 +36,7 @@ body{
             }
 
             .right{
+                font-size: 20px;
                 list-style-type: none;
                 margin: 0%;
                 padding-right: 10px;
@@ -272,7 +272,22 @@ body{
         }
     }
 }
-
+@media (max-width:768px){
+    body{
+        .content{
+            .top-nav {
+                .right{
+                    font-size: 15px;
+                    
+                    a {
+                        padding: 0px 10px;
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+    }
+}
 @media (max-width:768px){
     body{
         .content{
@@ -368,6 +383,7 @@ body{
         .content{
             .top-nav {
                 .right{
+                    position: relative;
                     a{
                         display: none;
                     }
@@ -385,7 +401,10 @@ body{
                 .right.responsive{
                     background-color: rgb(255, 255, 255);
                     border-radius: 5px;
+                    position: absolute;
                     z-index: 1;
+                    top: 30px;
+                    right: 10px;
     
                     a {
                         color: black;
@@ -448,8 +467,6 @@ body{
         .content{
             .top-nav {
                 .left{
-                    width: 27%;
-                    float: left;
                     padding: 20px;
 
                     img{
@@ -458,15 +475,12 @@ body{
                 }
     
                 .right{
-                    margin-top: 30px;
-
                     a{
                         display: none;
                     }
 
                     .hamburger-icon {
                         display: block;
-                        float: right;
                         margin:0px 10px;
 
                         i{
