alteration  css, pagination, search screen image fix

--- a/styles/search.css
+++ b/styles/search.css
@@ -1,66 +1,94 @@
-body .book-image {
-  background-image: url("https://framerusercontent.com/images/pH8DlNGW1BQprXwH0NnpNT6R68I.jpg?scale-down-to=4096");
-  background-repeat: no-repeat;
-  background-size: cover;
+body .content {
+  position: absolute;
+  top: 0%; }
+
+body .img-div {
+  height: 100%;
   width: 100%; }
-  body .book-image .search-btn {
-    height: 700px;
-    position: relative; }
-    body .book-image .search-btn .btn-div {
-      width: 100%;
-      position: absolute;
-      top: 35%; }
-      body .book-image .search-btn .btn-div .search-bar {
-        width: 750px;
-        margin: 0px auto;
-        box-shadow: 0px 1px 10px white;
-        border-radius: 5px;
-        padding: 10px; }
-        body .book-image .search-btn .btn-div .search-bar i {
-          color: white;
-          font-size: 30px;
-          padding: 0px 10px; }
-        body .book-image .search-btn .btn-div .search-bar input[type=text] {
-          border: none;
-          color: white;
-          background-color: rgba(0, 0, 0, 0.535);
-          font-family: Montserrat, sans-serif;
-          margin-left: 10px;
-          font-size: 20px;
-          width: 500px; }
-        body .book-image .search-btn .btn-div .search-bar input:focus {
-          outline: none; }
+
+body .search-btn {
+  width: 100%;
+  position: absolute;
+  top: 350px;
+  text-decoration: none; }
+  body .search-btn .btn-div {
+    width: 725px;
+    margin: auto;
+    box-shadow: 0px 1px 10px white;
+    border-radius: 5px;
+    padding: 10px; }
+    body .search-btn .btn-div i {
+      color: white;
+      font-size: 30px;
+      padding: 0px 10px; }
+    body .search-btn .btn-div input[type=text] {
+      border: none;
+      color: white;
+      background-color: rgba(0, 0, 0, 0.535);
+      font-family: Montserrat, sans-serif;
+      margin-left: 10px;
+      font-size: 20px;
+      width: 500px; }
+    body .search-btn .btn-div input:focus {
+      outline: none; }
 
 @media (max-width: 1024px) {
-  body .book-image .search-btn .btn-div .search-bar {
-    width: 650px; }
-    body .book-image .search-btn .btn-div .search-bar input[type=text] {
-      font-size: 18px;
-      width: 500px; } }
+  body .search-btn {
+    top: 300px; }
+    body .search-btn .btn-div {
+      width: 600px;
+      margin: auto; }
+      body .search-btn .btn-div input[type=text] {
+        font-size: 18px; } }
 
 @media (max-width: 768px) {
-  body .book-image .search-btn .btn-div .search-bar {
-    width: 500px; }
-    body .book-image .search-btn .btn-div .search-bar i {
-      font-size: 25px; }
-    body .book-image .search-btn .btn-div .search-bar input[type=text] {
-      font-size: 18px;
-      width: 400px; } }
+  body .img-div .book-image {
+    height: 650px; }
+  body .search-btn {
+    top: 280px; }
+    body .search-btn .btn-div {
+      width: 500px; }
+      body .search-btn .btn-div input[type=text] {
+        width: 280px;
+        padding: 0px;
+        font-size: 16px; }
+      body .search-btn .btn-div i {
+        font-size: 22px;
+        margin: 0px; } }
 
 @media (max-width: 736px) {
-  body .book-image .search-btn .btn-div .search-bar {
-    width: 450px; }
-    body .book-image .search-btn .btn-div .search-bar i {
-      font-size: 20px; }
-    body .book-image .search-btn .btn-div .search-bar input[type=text] {
-      font-size: 16px;
-      width: 350px; } }
+  body .img-div .book-image {
+    height: 550px; }
+  body .search-btn {
+    top: 220px; }
+    body .search-btn .btn-div {
+      width: 450px; }
+      body .search-btn .btn-div input[type=text] {
+        width: 240px; }
+      body .search-btn .btn-div i {
+        font-size: 20px; } }
 
-@media (max-width: 414px) {
-  body .book-image .search-btn .btn-div .search-bar {
-    width: 300px; }
-    body .book-image .search-btn .btn-div .search-bar i {
-      font-size: 20px; }
-    body .book-image .search-btn .btn-div .search-bar input[type=text] {
-      font-size: 14px;
-      width: 200px; } }
+@media (max-width: 425px) {
+  body .img-div .book-image {
+    height: 600px; }
+  body .search-btn {
+    top: 250px; }
+    body .search-btn .btn-div {
+      width: 320px; }
+      body .search-btn .btn-div input[type=text] {
+        width: 240px;
+        font-size: 14px; }
+      body .search-btn .btn-div i {
+        font-size: 18px; } }
+
+@media (max-width: 415px) {
+  body .img-div .book-image {
+    height: 600px; }
+  body .search-btn {
+    top: 250px; }
+    body .search-btn .btn-div {
+      width: 320px; }
+      body .search-btn .btn-div input[type=text] {
+        width: 240px; }
+      body .search-btn .btn-div i {
+        font-size: 15px; } }
