--- a/styles/search.scss
+++ b/styles/search.scss
@@ -3,73 +3,63 @@ $fontInter : inter, sans-serif;
 $fontManrope : manrope, sans-serif;
 $fontOpenSans : open-sans, sans-serif;
 
-
 body{
-    .book-image{
-        background-image: url('https://framerusercontent.com/images/pH8DlNGW1BQprXwH0NnpNT6R68I.jpg?scale-down-to=4096');
-        background-repeat: no-repeat;
-        background-size: cover;
+    .content{
+        position: absolute;
+        top: 0%;
+    }
+    .img-div{
+        height: 100%;
         width: 100%;
-        
+    }
 
-        .search-btn{
-            height: 700px;
-            position: relative;
+    .search-btn{
+        width: 100%;
+        position: absolute;
+        top: 350px;
+        text-decoration: none;
+
+        .btn-div{
+            width: 725px;
+            margin: auto;
+            box-shadow: 0px 1px 10px white;
+            border-radius: 5px;
+            padding: 10px;
     
-            .btn-div{
-                width: 100%;
-                position: absolute;
-                top: 35%;
+            i{
+                color: white;
+                font-size: 30px;
+                padding: 0px 10px;
+            }
     
-                .search-bar{
-                    width: 750px;
-                    margin:0px auto;
-                    box-shadow: 0px 1px 10px white;
-                    border-radius: 5px;
-                    padding: 10px;
-            
-                    i{
-                        color: white;
-                        font-size: 30px;
-                        padding: 0px 10px;
-                    }
-            
-                    input[type=text]{
-                        border: none;
-                        color: white;
-                        background-color: rgba(0, 0, 0, 0.535);
-                        font-family: $fontMonstserrat;
-                        margin-left: 10px;
-                        font-size: 20px;
-                        width: 500px;
+            input[type=text]{
+                border: none;
+                color: white;
+                background-color: rgba(0, 0, 0, 0.535);
+                font-family: $fontMonstserrat;
+                margin-left: 10px;
+                font-size: 20px;
+                width: 500px;
+
+            }
     
-                    }
-            
-                    input:focus{
-                        outline: none;
-                    }
-                    
-                }
+            input:focus{
+                outline: none;
             }
         }
     }
-
     
 }
 
 @media (max-width:1024px){
     body{
-        .book-image{
-            .search-btn{
-                .btn-div{
-                    .search-bar{
-                        width: 650px;
-                        input[type=text]{
-                            font-size: 18px;
-                            width: 500px;
-        
-                        }
-                    }
+        .search-btn{
+            top: 300px;
+            .btn-div{
+                width: 600px;
+                margin: auto;
+                input[type=text]{
+                    font-size: 18px;
                 }
             }
         }
@@ -78,23 +68,23 @@ body{
 
 @media (max-width:768px){
     body{
-        .book-image{
-            .search-btn{
-                .btn-div{
-                    
-                    .search-bar{
-                        width: 500px;
-
-                        i{
-                            font-size: 25px;
-                        }
-
-                        input[type=text]{
-                            font-size: 18px;
-                            width: 400px;
-        
-                        }
-                    }
+        .img-div{
+            .book-image{
+                height: 650px;
+            }  
+        }
+        .search-btn{
+            top: 280px;
+            .btn-div{
+                width: 500px;
+                input[type=text]{
+                    width: 280px;
+                    padding: 0px;
+                    font-size: 16px;
+                }
+                i{
+                    font-size: 22px;
+                    margin: 0px;
                 }
             }
         }
@@ -103,46 +93,65 @@ body{
 
 @media (max-width:736px){
     body{
-        .book-image{
-            .search-btn{
-                .btn-div{
-                    .search-bar{
-                        width: 450px;
-
-                        i{
-                            font-size: 20px;
-                        }
-
-                        input[type=text]{
-                            font-size: 16px;
-                            width: 350px;
-        
-                        }
-                    }
+        .img-div{
+            .book-image{
+                height: 550px;
+            }  
+        }
+        .search-btn{
+            top: 220px;
+            .btn-div{
+                width: 450px;
+                input[type=text]{
+                    width: 240px;
+                }
+                i{
+                    font-size: 20px;
                 }
             }
         }
     }
 }
 
-@media (max-width:414px){
+@media (max-width:425px){
     body{
-        .book-image{
-            .search-btn{
-                .btn-div{
-                    .search-bar{
-                        width: 300px;
+        .img-div{
+            .book-image{
+                height: 600px;
+            }  
+        }
+        .search-btn{
+            top: 250px;
+            .btn-div{
+                width: 320px;
+                input[type=text]{
+                    width: 240px;
+                    font-size: 14px;
+                }
+                i{
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
 
-                        i{
-                            font-size: 20px;
-                        }
-
-                        input[type=text]{
-                            font-size: 14px;
-                            width: 200px;
-        
-                        }
-                    }
+@media (max-width:415px){
+    body{
+        .img-div{
+            .book-image{
+                height: 600px;
+            }  
+        }
+        .search-btn{
+            top: 250px;
+            .btn-div{
+                width: 320px;
+                input[type=text]{
+                    width: 240px;
+                }
+                i{
+                    font-size: 15px;
                 }
             }
         }
