--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -232,6 +232,10 @@ body{
             display: flex;
             justify-content: center;
         }
+
+        .bottom-pagination nav div:first-child{
+            display: none;
+        }
     }
 }
 
