--- a/styles/index.css
+++ b/styles/index.css
@@ -130,6 +130,8 @@ body {
     font-family: open-sans, sans-serif;
     font-weight: 300;
     font-size: 12px; }
+  body .page-item.active .page-link {
+    background-color: rgba(0, 0, 0, 0); }
   body .active > .page-link, body .page-link.active {
     background-color: rgba(255, 255, 255, 0);
     color: rgba(0, 0, 0, 0.35);
