--- a/styles/index.scss
+++ b/styles/index.scss
@@ -194,6 +194,10 @@ body{
 
     }
 
+    .page-item.active .page-link{
+        background-color: rgba(0, 0, 0, 0);
+    }
+
     .active > .page-link, .page-link.active{
         background-color: rgba(255, 255, 255, 0);
         color: rgba(0, 0, 0, 0.35);
