--- a/styles/search.css
+++ b/styles/search.css
@@ -68,27 +68,36 @@ body .search-btn {
       body .search-btn .btn-div i {
         font-size: 20px; } }
 
+@media (max-width: 667px) {
+  body .search-btn .btn-div {
+    width: 350px; }
+    body .search-btn .btn-div input[type=text] {
+      width: 200px;
+      font-size: 15px; }
+    body .search-btn .btn-div i {
+      font-size: 18px; } }
+
 @media (max-width: 425px) {
   body .img-div .book-image {
     height: 600px; }
   body .search-btn {
     top: 250px; }
     body .search-btn .btn-div {
-      width: 320px; }
+      width: 280px; }
       body .search-btn .btn-div input[type=text] {
-        width: 240px;
-        font-size: 14px; }
+        width: 150px;
+        font-size: 15px; }
       body .search-btn .btn-div i {
         font-size: 18px; } }
 
-@media (max-width: 415px) {
+@media (max-width: 414px) {
   body .img-div .book-image {
     height: 600px; }
   body .search-btn {
     top: 250px; }
     body .search-btn .btn-div {
-      width: 320px; }
+      width: 250px; }
       body .search-btn .btn-div input[type=text] {
-        width: 240px; }
+        width: 180px; }
       body .search-btn .btn-div i {
         font-size: 15px; } }
