--- a/styles/search.scss
+++ b/styles/search.scss
@@ -113,6 +113,23 @@ body{
     }
 }
 
+@media (max-width:667px){
+    body{
+        .search-btn{
+            .btn-div{
+                width: 350px;
+                input[type=text]{
+                    width: 200px;
+                    font-size: 15px;
+                }
+                i{
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
+
 @media (max-width:425px){
     body{
         .img-div{
@@ -123,10 +140,10 @@ body{
         .search-btn{
             top: 250px;
             .btn-div{
-                width: 320px;
+                width: 280px;
                 input[type=text]{
-                    width: 240px;
-                    font-size: 14px;
+                    width: 150px;
+                    font-size: 15px;
                 }
                 i{
                     font-size: 18px;
@@ -136,7 +153,7 @@ body{
     }
 }
 
-@media (max-width:415px){
+@media (max-width:414px){
     body{
         .img-div{
             .book-image{
@@ -146,9 +163,9 @@ body{
         .search-btn{
             top: 250px;
             .btn-div{
-                width: 320px;
+                width: 250px;
                 input[type=text]{
-                    width: 240px;
+                    width: 180px;
                 }
                 i{
                     font-size: 15px;
