--- a/styles/sermon.css
+++ b/styles/sermon.css
@@ -176,6 +176,10 @@ body .sermon-div {
         width: 500px; }
       body .sermon-div .align-col .filter-item {
         width: 50%; }
+        body .sermon-div .align-col .filter-item ul li {
+          padding: 10px 0px; }
+          body .sermon-div .align-col .filter-item ul li label {
+            font-size: 20px; }
     body .sermon-div .align-right-col {
       width: 100%; }
       body .sermon-div .align-right-col .task-list {
@@ -247,14 +251,14 @@ body .sermon-div {
     font-size: 16px; }
   body .sermon-div .align-col .filter-item {
     width: 100%; }
+    body .sermon-div .align-col .filter-item ul li label {
+      font-size: 14px; }
   body .sermon-div .align-right-col .task-list .task-title {
     display: block; }
     body .sermon-div .align-right-col .task-list .task-title h5 {
       border: none; }
     body .sermon-div .align-right-col .task-list .task-title p {
-      padding: 5px 0px; }
-  body .divider {
-    display: none; } }
+      padding: 5px 0px; } }
 
 @media (max-width: 376px) {
   body .sermon-div .left-div .search-center-bar .search-bar {
