--- a/styles/index.scss
+++ b/styles/index.scss
@@ -409,6 +409,7 @@ body{
                     z-index: 1;
                     top: 30px;
                     right: 10px;
+                    padding: 5px;
     
                     a {
                         color: black;
