--- a/styles/detail.scss
+++ b/styles/detail.scss
@@ -6,6 +6,7 @@ $fontOpenSans : open-sans, sans-serif;
 body{
 
     .content{
+        position: static;
         .top-nav {
             .right{
                 a {
@@ -16,14 +17,9 @@ body{
     }
 
     .detail-page-container{
-        background-image: url('../img/sunday-background.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 100%;
-        padding-bottom: 50px;
-
+        width: 100%;
         .detail-vedio-div{
-            padding-top: 150px;
+            padding-top: 50px;
             width: 651px;
             margin: auto;
             position: relative;
@@ -38,8 +34,8 @@ body{
 
             .vedio-icon{
                 position: absolute;
-                top: 375px;
-                left: 300px;
+                top: 270px;
+                left: 290px;
                 box-shadow: none;
                 cursor: pointer;
             }
@@ -89,17 +85,20 @@ body{
         }
 
         .detail-notes{
-            margin: 60px 40px 0px;
+            width: 90%;
+            margin: auto;
             text-align: left;
             font-family: $fontMonstserrat;
             font-size: 16px;
             font-weight: 500;
             line-height: 30px;
+            padding-bottom: 50px;
         }
     }
 }
 
 @media (max-width:1025px){
+    
     body{
         .detail-page-container{
             .detail-vedio-div{
@@ -111,7 +110,7 @@ body{
                     }
                 }
                 .vedio-icon{
-                    top: 316px;
+                    top: 220px;
                     left: 220px;
                     width: 70px;
                 }
@@ -190,7 +189,7 @@ body{
                 }
                 .vedio-icon{
                     width: 50px;
-                    top: 170px;
+                    top: 145px;
                     left: 130px;
                 }
     
