--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,11 @@ body {
   margin: 0%;
   padding: 0%;
   width: 100%; }
+  body .holder {
+    background-image: url("../img/sunday-background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%; }
   body .wrapper {
     width: 100%;
     height: 700px; }
@@ -10,7 +15,9 @@ body {
       background-size: cover;
       position: relative; }
   body .content {
-    width: 100%; }
+    width: 100%;
+    position: absolute;
+    top: 0%; }
     body .content .top-nav {
       display: flex;
       justify-content: space-between;
@@ -44,7 +51,7 @@ body {
       body .content .top-nav .right .active {
         text-decoration: underline; }
   body .center-content {
-    top: 0px;
+    top: 90px;
     width: 100%;
     position: absolute; }
     body .center-content .center-detail {
