--- a/styles/sermon.scss
+++ b/styles/sermon.scss
@@ -178,6 +178,11 @@ body{
                 margin: 15px 0px;
                 padding: 20px;
 
+                .left-card{
+                    text-decoration: none;
+                    color: #000000;
+                }
+
                 .task-title{
                     display: flex;
     
