--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,15 +7,8 @@ body{
     margin: 0%;
     padding: 0%;
     width: 100%;
-    
-    .holder{
-        background-image: url('../img/sunday-background.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 100%;
-    }
 
-    .wrapper{
+    .video-wrapper{
         width: 100%;
         height: 700px;
 
@@ -127,6 +120,7 @@ body{
     }
 
     footer{
+        position: absolute;
         background-image: url('https://framerusercontent.com/images/rX3s5jtZ4spiYfb24VBSEi1nA.jpg?scale-down-to=4096');
         padding: 35px 0px;
         background-repeat: no-repeat;
